--- a/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
@@ -62,7 +62,13 @@
             <Button
                 Command="{x:Bind ViewModel.RefreshModsInGameCommand}"
                 Content="Refresh Mods"
-                IsHitTestVisible="True" />
+                IsHitTestVisible="True">
+                <ToolTipService.ToolTip>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{x:Bind ViewModel.ThreeDMigtoProcessManager.ProcessPath, Mode=OneWay}" TextWrapping="WrapWholeWords" />
+                    </StackPanel>
+                </ToolTipService.ToolTip>
+            </Button>
             <Button
                 Margin="32,0,32,0"
                 Command="{x:Bind ViewModel.Start3DmigotoCommand}"
@@ -75,6 +81,11 @@
                         Height="16"
                         Source="../Assets/Images/Start_Genshin.png" />
                 </StackPanel>
+                <ToolTipService.ToolTip>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{x:Bind ViewModel.GenshinProcessManager.ProcessPath, Mode=OneWay}" TextWrapping="WrapWholeWords" />
+                    </StackPanel>
+                </ToolTipService.ToolTip>
             </Button>
         </StackPanel>
 
