Bundled 7zip with jasm In most cases jasm will handle duplicate folders Varius compiler warning fixes

--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
@@ -222,10 +222,12 @@
 
                     </StackPanel>
 
-                    <Grid
+                    <StackPanel
                         Grid.Column="1"
                         HorizontalAlignment="Right"
-                        VerticalAlignment="Center">
+                        VerticalAlignment="Center"
+                        Orientation="Horizontal">
+                        <ProgressRing IsActive="{x:Bind ViewModel.IsAddingModFolder, Mode=OneWay}" />
                         <InfoBar
                             Height="50"
                             VerticalAlignment="Center"
@@ -234,7 +236,7 @@
                             Message="{x:Bind ViewModel.ModListVM.InfoBarMessage, Mode=OneWay}"
                             Severity="{x:Bind ViewModel.ModListVM.Severity, Mode=OneWay}"
                             Visibility="Visible" />
-                    </Grid>
+                    </StackPanel>
 
                 </Grid>
                 <Grid
