--- a/src/GIMI-ModManager.WinUI/Views/DebugPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/DebugPage.xaml
@@ -3,23 +3,39 @@
     x:Class="GIMI_ModManager.WinUI.Views.DebugPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
-    xmlns:controls1="using:GIMI_ModManager.WinUI.Views.Controls"
+    xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:GIMI_ModManager.WinUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:models="using:GIMI_ModManager.WinUI.Models"
-    d:DataContext="{d:DesignInstance Type=models:NewModModel}"
+    xmlns:viewModels="using:GIMI_ModManager.WinUI.Models.ViewModels"
     mc:Ignorable="d">
 
+    <Page.Resources>
+        <Flyout x:Name="Flyout">
+            <Grid>
+                    <controls:SelectCharacterFromGrid GridSource="{x:Bind ViewModel.Items, Mode=OneWay}" ItemClickedCommand="{x:Bind ViewModel.ItemClickedCommand}" />
+            </Grid>
+        </Flyout>
+    </Page.Resources>
+
     <Grid>
-        <StackPanel HorizontalAlignment="Left">
-            <controls1:EditableTextBlock
-                Width="200"
-                IsEditMode="{x:Bind ViewModel.IsEditing, Mode=OneWay}"
-                Style="{ThemeResource DisplayTextBlockStyle}"
-                Text="{x:Bind ViewModel.TestString, Mode=TwoWay}" />
-            <Button Command="{x:Bind ViewModel.ToggleEditingCommand}" Content="EditText" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <StackPanel>
+            <Button Command="{x:Bind ViewModel.TestCrawlerCommand}" Content="Test" />
+            <TextBox Text="{x:Bind ViewModel.Path, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Button Content="Open" Flyout="{StaticResource Flyout}" />
         </StackPanel>
+
+        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.InGameSkins}">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="viewModels:SkinVM">
+                    <TextBlock Text="{x:Bind DisplayName}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
