--- a/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
@@ -250,6 +250,8 @@
                                 Margin="{StaticResource XXSmallTopMargin}"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Bottom"
+                                FontFamily="{StaticResource GenshinFont}"
+                                FontSize="14"
                                 Text="{x:Bind Character.DisplayName}" />
                         </Grid>
                     </Grid>
